--- a/index.html
+++ b/index.html
@@ -36,9 +36,20 @@
             text-align: center;
         }
         input, select, button {
-            padding: 10px;
-            font-size: 14px;
+            padding: 12px;
+            font-size: 16px;
             margin-bottom: 10px;
+            border: none;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+        button {
+            background-color: #2D68C4;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #1E4F8E;
         }
         table {
             width: 100%;
@@ -76,7 +87,11 @@
         .block-checkbox {
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 10px;
+        }
+        .block-checkbox input {
+            width: 20px;
+            height: 20px;
         }
         .copy-button-container {
             text-align: center;
