--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
     <div id="popup">
         <h3>Instructions and Disclaimers</h3>
         <p>This unit calendar generator is designed for Geffen Academy's schedule. Be aware of the following bugs, which require some care:</p>
-        <p>1. When holidays are entered, sometimes the fields adjacent to the holidays generate extra dates. These can just be deleted. I don't know why this is happening.</p>
+        <p>1.Holidays are generated out of order.</p>
         <p>2. If you are using the "Number of Classes" function, always add more classes than you think you need to make sure the calendar generates all possible meetings for the classes.</p>
-        <p>3. Always double check against Geffen's master calendar. This is designed to be a time saving tool, but the program is only as smart as its programmer. Be prepared to shift dates around as necessary.</p>
+        <p>3. It is creating two lines for each class number. I am working on a way to merge the appropriate cells automatically. For now, it must be done manually.</p>
         <button id="close-popup" onclick="closePopup()">Close</button>
     </div>
 
@@ -255,15 +255,15 @@
         }
 
         function formatDateToString(date) {
-            const year = date.getFullYear();
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const day = String(date.getDate()).padStart(2, '0');
-            return `${year}-${month}-${day}`;
+            const year = date.getUTCFullYear();
+            const month = String(date.getUTCMonth() + 1).padStart(2, '0');
+            const day = String(date.getUTCDate()).padStart(2, '0');
+            return ${year}-${month}-${day};
         }
 
         function parseDateFromString(dateStr) {
             const [year, month, day] = dateStr.split('-').map(Number);
-            return new Date(year, month - 1, day);
+            return new Date(Date.UTC(year, month - 1, day));
         }
 
         function generateUnitCalendar() {
@@ -323,12 +323,11 @@
             let lessonSchedule = {};
             let classNumber = 1;
             let dateEntries = [];
-
-            let totalClassesGenerated = 0;
+            let blocksForCurrentClass = [];
 
             while ((endOption === 'date' && currentDate <= endDate) || 
-                   (endOption === 'class-count' && totalClassesGenerated < classCountInput * selectedBlocks.length)) {
-                const dayOfWeek = currentDate.getDay();
+                   (endOption === 'class-count' && classNumber <= classCountInput)) {
+                const dayOfWeek = currentDate.getUTCDay();
                 const formattedDate = formatDateToString(currentDate);
 
                 // Add holidays to the dateEntries array
@@ -336,81 +335,60 @@
                     dateEntries.push({
                         type: 'holiday',
                         date: formattedDate,
-                        displayDate: `${weekDays[dayOfWeek - 1]} ${currentDate.getMonth() + 1}/${currentDate.getDate()}`,
+                        displayDate: ${weekDays[dayOfWeek - 1]} ${currentDate.getUTCMonth() + 1}/${currentDate.getUTCDate()},
                     });
-                    currentDate.setDate(currentDate.getDate() + 1);
+                    currentDate.setUTCDate(currentDate.getUTCDate() + 1);
                     continue;
                 }
 
                 if (dayOfWeek === 0 || dayOfWeek === 6) { // Skip weekends
-                    currentDate.setDate(currentDate.getDate() + 1);
+                    currentDate.setUTCDate(currentDate.getUTCDate() + 1);
                     continue;
                 }
 
                 const weekDayName = Object.keys(scheduleData[currentWeek])[dayOfWeek - 1];
                 const scheduleForDay = scheduleData[currentWeek][weekDayName];
-                const dateStr = `${weekDays[dayOfWeek - 1]} ${currentDate.getMonth() + 1}/${currentDate.getDate()}`;
+                const dateStr = ${weekDays[dayOfWeek - 1]} ${currentDate.getUTCMonth() + 1}/${currentDate.getUTCDate()};
 
                 scheduleForDay.forEach(block => {
-                    if (selectedBlocks.includes(block) && 
-                        ((endOption === 'date' && currentDate <= endDate) || 
-                         (endOption === 'class-count' && totalClassesGenerated < classCountInput * selectedBlocks.length))) {
-                        
-                        if (!lessonSchedule[block]) {
-                            lessonSchedule[block] = [];
+                    if (selectedBlocks.includes(block) && !blocksForCurrentClass.includes(block)) {
+                        if (!lessonSchedule[classNumber]) {
+                            lessonSchedule[classNumber] = [];
                         }
 
-                        if (!lessonSchedule[block][classNumber]) {
-                            lessonSchedule[block][classNumber] = [];
-                        }
-
-                        lessonSchedule[block][classNumber].push({ date: formattedDate, displayDate: dateStr, week: currentWeek });
-                        totalClassesGenerated++;
+                        lessonSchedule[classNumber].push({ block, displayDate: dateStr, week: currentWeek });
+                        blocksForCurrentClass.push(block);
                     }
                 });
+
+                if (blocksForCurrentClass.length === selectedBlocks.length) {
+                    // When all blocks have been scheduled for the current class number, move to the next class
+                    blocksForCurrentClass = [];
+                    classNumber++;
+                }
 
                 if (dayOfWeek === 5) { // After Friday, switch weeks
                     currentWeek = currentWeek === 'blue' ? 'gold' : 'blue';
                 }
 
-                currentDate.setDate(currentDate.getDate() + 1);
-
-                // If all blocks have had this class number, increment class number
-                const allBlocksCompleted = selectedBlocks.every(block => lessonSchedule[block] && lessonSchedule[block][classNumber]);
-                if (allBlocksCompleted) {
-                    classNumber++;
-                }
-
-                if (endOption === 'class-count' && totalClassesGenerated >= classCountInput * selectedBlocks.length) {
-                    break;
-                }
+                currentDate.setUTCDate(currentDate.getUTCDate() + 1);
             }
 
             // Add the holidays and class dates to dateEntries
-            Object.keys(lessonSchedule).forEach(block => {
-                Object.keys(lessonSchedule[block]).forEach(classNum => {
+            Object.keys(lessonSchedule).forEach(classNum => {
+                lessonSchedule[classNum].forEach(entry => {
                     dateEntries.push({
                         type: 'class',
                         classNum,
-                        block,
-                        dates: lessonSchedule[block][classNum]
+                        block: entry.block,
+                        displayDate: entry.displayDate,
+                        week: entry.week
                     });
                 });
             });
 
             // Sort the dateEntries array by date
-            dateEntries.sort((a, b) => parseDateFromString(a.dates ? a.dates[0].date : a.date) - parseDateFromString(b.dates ? b.dates[0].date : b.date));
-
-            // Group by class number
-            let groupedClasses = {};
-            dateEntries.forEach(entry => {
-                if (entry.type === 'class') {
-                    if (!groupedClasses[entry.classNum]) {
-                        groupedClasses[entry.classNum] = [];
-                    }
-                    groupedClasses[entry.classNum].push(...entry.dates.map(date => `${date.displayDate} (${entry.block})`));
-                }
-            });
+            dateEntries.sort((a, b) => parseDateFromString(a.displayDate.split(' ')[1]) - parseDateFromString(b.displayDate.split(' ')[1]));
 
             // Generate the rows in the table
             dateEntries.forEach(entry => {
@@ -425,12 +403,12 @@
                     const cell5 = row.insertCell(4);
 
                     cell1.textContent = '-';
-                    cell2.textContent = `${entry.displayDate} (Holiday)`;
+                    cell2.textContent = ${entry.displayDate} (Holiday);
                     cell3.textContent = 'Holiday';
                     cell4.textContent = '';
                     cell5.textContent = '';
-                } else if (entry.type === 'class' && groupedClasses[entry.classNum]) {
-                    const rowClass = entry.dates[0].week === 'blue' ? 'blue-week' : 'gold-week';
+                } else {
+                    const rowClass = entry.week === 'blue' ? 'blue-week' : 'gold-week';
                     row.className = rowClass;
 
                     const cell1 = row.insertCell(0);
@@ -440,13 +418,10 @@
                     const cell5 = row.insertCell(4);
 
                     cell1.textContent = entry.classNum;
-                    cell2.innerHTML = groupedClasses[entry.classNum].join('<br>');
+                    cell2.textContent = ${entry.displayDate} (${entry.block});
                     cell3.textContent = '';
                     cell4.textContent = '';
                     cell5.textContent = '';
-
-                    // Remove the grouped class to avoid duplication
-                    delete groupedClasses[entry.classNum];
                 }
             });
 
